--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,11 +9,12 @@
     <ion-toolbar>
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
-  </ion-header>'
+  </ion-header>
   
 <div class = "button-wrapper-redirect">
   <ion-button id = "redirectSleep" routerLink = "/sleep-tracker" shape = "round">Sleep Tracker</ion-button>
   <ion-button id = "redirectFood" routerLink = "/food-logger"  shape = "round">Food Tracker</ion-button>
   <ion-button id = "redirectExercise" routerLink = "/exercise-logger" shape = "round">Exercise Tracker</ion-button>
+  <button class = "circular-button">Vitality™ Score: 78</button>
 </div>
 </ion-content> 
