Added structure for storing one week of sleep data; still need to update array after new data is entered, data structure might need to be more complex.

--- a/src/app/sleep-tracker/sleep-tracker.page.html
+++ b/src/app/sleep-tracker/sleep-tracker.page.html
@@ -30,6 +30,9 @@
               Well Rested? It Seems Like It!
           </ion-card-content>
       </ion-card>
+
+    <ion-label>id="recommendation"</ion-label>
+
   </div>
 </ion-content>
 
