--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,10 +2,9 @@
   width: 140px;
   height: 140px;
   border-radius: 50%; 
-  background-color: #013c30f9; 
-  color: #0d0c0c; 
-  border: 4px solid #bb08a3; 
-  outline: 5px solid #02262bf1;
+  background-color: #739fb16d; 
+  border: 4px solid #c6e1ed; 
+  outline: 5px solid #024040f1;
   margin-top: 20px;
 }
 .button-wrapper-redirect{
@@ -17,28 +16,30 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 10px solid #940746bc; 
-  outline: 20px solid #02262bf1;
+  border: 10px solid #078194bc; 
+  outline: 20px solid #040222f9;
   padding: 50px;
+  background-image: linear-gradient(to bottom, #879aa494, #011727d9);
 }
 .button-wrapper-redirect button {
-  margin-bottom: 50px; /* Adjust the value as per your desired spacing */
+  margin-bottom: 50px; 
   margin-left: 70px;
   margin-right: 70px;
   margin-top: 50px;
-  color: #ffffff;
+  color: #090909;
   font-size: 20px;
   font-weight: bold;
 }
 .button-wrapper-redirect::before {
   content: '';
   position: absolute;
-  top: -10px; /* Adjust the value to move the border up */
-  left: -10px; /* Adjust the value to move the border up */
-  right: -10px; /* Adjust the value to move the border up */
-  bottom: -10px; /* Adjust the value to move the border up */
-  border: 10px solid #940746bc;
-  outline: 20px solid #013c30f9;
+  top: -10px; 
+  left: -10px; 
+  right: -10px; 
+  bottom: -10px; 
+  border: 10px solid #078194bc;
+  outline: 20px solid #040222b1;
   border-radius: 20%;
   z-index: -1;
 }
+
