--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #bb08a3;
+  --ion-color-primary: #739fb1a9;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #0f0f0f;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
