--- a/src/app/food-logger/food-logger.page.html
+++ b/src/app/food-logger/food-logger.page.html
@@ -22,18 +22,18 @@
       <ion-card-header>
         <ion-card-title>Breakfast Tracking</ion-card-title>
         <ion-card-subtitle>Please Enter The Calories For Breakfast</ion-card-subtitle>
-      </ion-card-header> 
-      <ion-input type = "number" 
-      fill = "solid" 
-      label = "Calories" 
-      labelPlacement = "stacked" 
+      </ion-card-header>
+      <ion-input type = "number"
+      fill = "solid"
+      label = "Calories"
+      labelPlacement = "stacked"
       placeholder = "Please enter calories consumed"
       [(ngModel)] = "breakfastCals">
     </ion-input>
-    <ion-button id = "select-breakfast-cals" shape = "round" (click) = "reset()" [class.hide-button] = "submitHidden">Submit</ion-button>
+    <ion-button id = "select-breakfast-cals" shape = "round" (click) = "resetNonDinner()" [class.hide-button] = "submitHidden">Submit</ion-button>
     <ion-card-content>
       Let's start the day off right!
-    </ion-card-content>  
+    </ion-card-content>
   </ion-card>
   </div>
 
@@ -43,18 +43,18 @@
       <ion-card-header>
         <ion-card-title>Lunch Tracking</ion-card-title>
         <ion-card-subtitle>Please Enter The Calories For Lunch</ion-card-subtitle>
-      </ion-card-header> 
-      <ion-input type = "number" 
-      fill = "solid" 
-      label = "Calories" 
-      labelPlacement = "stacked" 
+      </ion-card-header>
+      <ion-input type = "number"
+      fill = "solid"
+      label = "Calories"
+      labelPlacement = "stacked"
       placeholder = "Please enter calories consumed"
       [(ngModel)] = "lunchCals">
     </ion-input>
-    <ion-button id = "select-lunch-cals" shape = "round" (click) = "reset()" [class.hide-button] = "submitHidden">Submit</ion-button>
+    <ion-button id = "select-lunch-cals" shape = "round" (click) = "resetNonDinner()" [class.hide-button] = "submitHidden">Submit</ion-button>
     <ion-card-content>
       Let's get a pick me up!
-    </ion-card-content>  
+    </ion-card-content>
   </ion-card>
   </div>
 
@@ -66,18 +66,18 @@
       <ion-card-header>
         <ion-card-title>Dinner Tracking</ion-card-title>
         <ion-card-subtitle>Please Enter The Calories For Dinner</ion-card-subtitle>
-      </ion-card-header> 
-      <ion-input type = "number" 
-      fill = "solid" 
-      label = "Calories" 
-      labelPlacement = "stacked" 
+      </ion-card-header>
+      <ion-input type = "number"
+      fill = "solid"
+      label = "Calories"
+      labelPlacement = "stacked"
       placeholder = "Please enter calories consumed"
       [(ngModel)] = "dinnerCals">
     </ion-input>
     <ion-button id = "select-dinner-cals" shape = "round" (click) = "reset()" [class.hide-button] = "submitHidden">Submit</ion-button>
     <ion-card-content>
       Let's finish off strong!
-    </ion-card-content>  
+    </ion-card-content>
   </ion-card>
   </div>
 </ion-content>
