button on home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,7 @@
   </ion-header>
   
 <div class = "button-wrapper-redirect">
+  <ion-button id = "redirectBMI" routerLink = "/bmi-calc" shape="round">BMI Calculator</ion-button>
   <ion-button id = "redirectSleep" routerLink = "/sleep-tracker" shape = "round">Sleep Tracker</ion-button>
   <ion-button id = "redirectFood" routerLink = "/food-logger"  shape = "round">Food Tracker</ion-button>
   <ion-button id = "redirectExercise" routerLink = "/exercise-logger" shape = "round">Exercise Tracker</ion-button>
