--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,6 @@
   <ion-button id = "redirectFood" routerLink = "/food-logger"  shape = "round">Food Tracker</ion-button>
   <ion-button id = "redirectExercise" routerLink = "/exercise-logger" shape = "round">Exercise Tracker</ion-button>
   <ion-button id = "redirectBMI" routerLink = "/bmi-calc" shape="round">BMI Calculator</ion-button>
-  <button class = "circular-button">Vitality™ Score: 78</button>
+  <button class = "circular-button" routerLink = "/health-score"> Vitality Score</button>
 </div>
 </ion-content> 
