fixed base health-score page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,12 +10,12 @@
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
-  
+
 <div class = "button-wrapper-redirect">
   <ion-button id = "redirectSleep" routerLink = "/sleep-tracker" shape = "round">Sleep Tracker</ion-button>
   <ion-button id = "redirectFood" routerLink = "/food-logger"  shape = "round">Food Tracker</ion-button>
   <ion-button id = "redirectExercise" routerLink = "/exercise-logger" shape = "round">Exercise Tracker</ion-button>
   <ion-button id = "redirectBMI" routerLink = "/bmi-calc" shape="round">BMI Calculator</ion-button>
-  <button class = "circular-button" routerLink = "/health-score"> Vitality Score</button>
+  <ion-button class = "circular-button" routerLink = "/health-score"> Vitality Score</ion-button>
 </div>
-</ion-content> 
+</ion-content>
