Added BMI calculation and display, fixed exerciselogging, and updated the healthscore page
changed the BMI calc page to show BMI, havent added functionality to store it yet. Found out exerciseLogger wasnt logging, so fixed that, and also did some barebones work on the health score page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,6 +7,12 @@
   outline: 5px solid #024040f1;
   margin-top: 20px;
 }
+
+ion-content {
+  /* Add your CSS styles here */
+  background-image: linear-gradient(to bottom, #879aa494, #011727d9);
+}
+
 .button-wrapper-redirect{
   position: absolute;
   top: 50%;
