--- a/src/app/bmi-calc/bmi-calc.page.html
+++ b/src/app/bmi-calc/bmi-calc.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">bmi-calc</ion-title>
+      <ion-title size="large">BMI Calculator</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -17,12 +17,28 @@
     </ion-card-header>
     <ion-card-content>
       <ion-item>
-        <ion-label>Height (in)</ion-label>
-        <ion-input type="number" [(ngModel)] = "height"></ion-input>
+        <ion-label>Height</ion-label>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-item>
+                <ion-input placeholder = "0" type="number" [(ngModel)] = "feet"></ion-input>
+                <ion-label position = "after">ft</ion-label>
+              </ion-item>
+            </ion-col>
+            <ion-col size="6">
+              <ion-item>
+
+                <ion-input placeholder = "0" type="number" [(ngModel)] = "inches"></ion-input>
+                <ion-label position = "after">in</ion-label>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-item>
       <ion-item>
         <ion-label>Weight (lb)</ion-label>
-        <ion-input type="number" [(ngModel)] = "weight"></ion-input>
+        <ion-input placeholder = '0' type="number" [(ngModel)] = "lbs"></ion-input>
       </ion-item>
     </ion-card-content>
     <ion-button (click)="logUserInput()">Submit</ion-button>
