--- a/src/app/health-score/health-score.page.html
+++ b/src/app/health-score/health-score.page.html
@@ -7,7 +7,28 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">health-score</ion-title>
+      <ion-title size="large">Health Score </ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Your Numbers for Today</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label>Cals Consumed: </ion-label>
+        <ion-label>{{ cals }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Cals Burned: </ion-label>
+        <ion-label>{{ calsBurned }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Hours Slept: </ion-label>
+        <ion-label>{{ sleep }}</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
