--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">home</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -16,6 +16,6 @@
   <ion-button id = "redirectFood" routerLink = "/food-logger"  shape = "round">Food Tracker</ion-button>
   <ion-button id = "redirectExercise" routerLink = "/exercise-logger" shape = "round">Exercise Tracker</ion-button>
   <ion-button id = "redirectBMI" routerLink = "/bmi-calc" shape="round">BMI Calculator</ion-button>
-  <ion-button class = "circular-button" routerLink = "/health-score"> Vitality Score</ion-button>
+  <ion-button class = "circular-button" routerLink = "/health-score" shape = "round"> Vitality Score</ion-button>
 </div>
 </ion-content>
