added last functionalities to app

--- a/src/app/bmi-calc/bmi-calc.page.html
+++ b/src/app/bmi-calc/bmi-calc.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-button id="home-page" shape="round" href="/home">← Back to Home</ion-button>
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">BMI Calculator</ion-title>
