--- a/src/app/health-score/health-score.page.html
+++ b/src/app/health-score/health-score.page.html
@@ -5,9 +5,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-button id="home-page" shape="round" href="/home">← Back to Home</ion-button>
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Health Score </ion-title>
+      <ion-title size="large">Health Score {{VitalityScore}} </ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -18,16 +19,30 @@
     <ion-card-content>
       <ion-item>
         <ion-label>Cals Consumed: </ion-label>
-        <ion-label>{{ cals }}</ion-label>
+        <ion-label>{{ cals[cals.length - 1] }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label>Cals Burned: </ion-label>
-        <ion-label>{{ calsBurned }}</ion-label>
+        <ion-label>{{ calsBurned[calsBurned.length - 1] }}</ion-label>
       </ion-item>
       <ion-item>
         <ion-label>Hours Slept: </ion-label>
-        <ion-label>{{ sleep }}</ion-label>
+        <ion-label>{{ sleep[sleep.length - 1].toFixed(2) }}</ion-label>
       </ion-item>
+      <ion-item>
+        <ion-label>Overall Vitality Score: </ion-label>
+        <ion-label>{{ VitalityScore }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label class="ion-text-wrap">{{ sleepRecommendation }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label class="ion-text-wrap">{{ foodRecommendation }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label class="ion-text-wrap">{{ exerciseRecommendation }}</ion-label>
+      </ion-item>
+      
     </ion-card-content>
   </ion-card>
 
